# consolidate-bear-markdown

./: .Plan  .cursorrules  .gitignore  .pre-commit-config.yaml  Makefile  README.md  example_config.toml  pyproject.toml  requirements.txt
.cursor/: config.rules.template
.cursor/rules/: ai_commands.rules  package.rules  python.rules  testing.rules
docs/: architecture.md  prd.md
src/: __init__.py  cli.py  console_manager.py  converter_factory.py  file_converter.py  file_manager.py  file_system.py  image_cache.py  image_converter.py  logging_config.py  logging_utils.py  markdown_file.py  markdown_processor_v2.py  markitdown.py  markitdown_wrapper.py  processing_stats.py  progress_manager.py  reference_match.py
src/converters/: binary_converter.py  document_converter.py  image_converter.py  pdf_converter.py  spreadsheet_converter.py  text_converter.py
tests/: conftest.py  test_cli.py  test_converter_factory.py  test_core_functionality.py  test_file_manager.py  test_file_system.py  test_image_cache.py  test_image_converter.py  test_logging.py  test_markdown_processor_v2.py  test_markitdown_wrapper.py  test_reference_match.py
