[project]
name = "consolidate-bear-markdown"
version = "0.1.0"
description = "Tool to process Bear.app markdown files and inline attachments"
authors = [{ name = "Chad Walters", email = "chad.walters@gmail.com" }]
dependencies = [
  "markitdown",
  "openai",
  "tomli",
  "tqdm",
  "rich",
  "pandas",
  "tabulate",             # Required for pandas markdown tables
  "pandas-stubs",         # Type stubs for pandas
  "cairosvg",             # For SVG to PNG conversion
  "beautifulsoup4",       # For HTML processing
  "types-beautifulsoup4", # Type stubs for beautifulsoup4
  "pillow",               # For image processing
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest", "mypy", "black", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
tmp_path_retention_count = 0
tmp_path_retention_policy = "failed"
tmp_path_cleanup_ignore_paths = [".nova"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
select = ["E", "F", "B"]
ignore = []
line-length = 88
target-version = "py311"
